feat(tv): complete PianduoDuo UI and mirror OTA updates